app_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app
  labels:
    app: dev-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-app
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      containers:
      - name: dev-app
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-file
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: index-file
        configMap:
          name: html-configmap
