app_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-app-service
spec:
  selector:
    app: dev-app
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
